--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -227,7 +227,7 @@ input[type=submit] {
 	padding-left: 90px;
 	}
 	#logo {
-		width:607px;
+		width:584px;
 	}
 	.main-section {
 		margin:20px;
@@ -263,8 +263,11 @@ input[type=submit] {
 	.main-section {
 	max-width: 600px;
 	margin-left: 100px;
+	padding-left: 50px
 	}
 	.sidebar {
 	margin-right:100px;
+	width: 500px;
+	}
 
 }
